appId: swmansion.enriched.markdown.example
---
- tapOn:
    id: focus-button

- runFlow:
    when:
      platform: iOS
    commands:
      - inputText: ${VALUE}

# Android required to split each line via code
- runFlow:
    when:
      platform: Android
    commands:
      - runScript:
          file: '../../scripts/split_lines.js'
          env:
            VALUE: ${VALUE}
      - repeat:
          times: ${output.lineCount}
          commands:
            - runScript:
                file: '../../scripts/next_line.js'
                env:
                  LINES: ${output.lines}
                  INDEX: ${output.lineIndex}
            - inputText: ${output.currentLine}
            - pressKey: Enter

- tapOn:
    id: blur-button
